# day-bot

./: .gitignore  README.md  app.py  data_manager.py  error_handler.py  main.py  pyproject.toml  utils.py  variable.py
.github/workflows/: mypy.yml
cogs/: misc.py  response.py  vote.py
templates/: response.html
utils/: botUtility.py
